# kujira-bako

./: .editorconfig  .gitignore  CHANGELOG.md  Makefile  kujira-bako.cabal
app/: main.hs
res/etc/default/: docker
